[package]
name = "imbot-crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6.0"
serde_qs = "0.12.0"
base64 = "0.21.2"
hex = "0.4"
sha1 = "0.10.5"
cbc = "0.1.2"
aes = "0.8"
rand = "0.8.5"
byteorder = "1.4.3"
anyhow = "1.0.75"
thiserror = "1.0.47"
